safemlx-sys/src/bindings.rs

extern "C" {
    pub fn mlx_linalg_qr(
        res_0: *mut mlx_array,
        res_1: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_linalg_solve(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_linalg_solve_triangular(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        upper: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_linalg_svd(
        res: *mut mlx_vector_array,
        a: mlx_array,
        compute_uv: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_linalg_tri_inv(
        res: *mut mlx_array,
        a: mlx_array,
        upper: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\defgroup memory Memory operations\n/\n/**@{"]
    pub fn mlx_clear_cache() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_get_active_memory(res: *mut usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_get_cache_memory(res: *mut usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_get_memory_limit(res: *mut usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_get_peak_memory(res: *mut usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_reset_peak_memory() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_set_cache_limit(res: *mut usize, limit: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_set_memory_limit(res: *mut usize, limit: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_set_wired_limit(res: *mut usize, limit: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\defgroup metal Metal specific operations\n/\n/**@{"]
    pub fn mlx_metal_is_available(res: *mut bool) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_metal_set_metallib_path(
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_metal_set_embedded_metallib(
        compressed_data: *const u8,
        compressed_size: usize,
        uncompressed_size: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_metal_start_capture(path: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_metal_stop_capture() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\defgroup ops Core array operations\n/\n/**@{"]
    pub fn mlx_abs(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_add(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_addmm(
        res: *mut mlx_array,
        c: mlx_array,
        a: mlx_array,
        b: mlx_array,
        alpha: f32,
        beta: f32,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_all_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_all_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_all(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_allclose(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        rtol: f64,
        atol: f64,
        equal_nan: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_any_axes(
        res: *mut mlx_array,
        a: mlx_array,
        axes: *const ::std::os::raw::c_int,
        axes_num: usize,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_any_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_any(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arange(
        res: *mut mlx_array,
        start: f64,
        stop: f64,
        step: f64,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arccos(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arccosh(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arcsin(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arcsinh(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arctan(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arctan2(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_arctanh(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argmax_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argmax(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argmin_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argmin(
        res: *mut mlx_array,
        a: mlx_array,
        keepdims: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argpartition_axis(
        res: *mut mlx_array,
        a: mlx_array,
        kth: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argpartition(
        res: *mut mlx_array,
        a: mlx_array,
        kth: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argsort_axis(
        res: *mut mlx_array,
        a: mlx_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_argsort(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_array_equal(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        equal_nan: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_as_strided(
        res: *mut mlx_array,
        a: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        strides: *const i64,
        strides_num: usize,
        offset: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_astype(
        res: *mut mlx_array,
        a: mlx_array,
        dtype: mlx_dtype,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_atleast_1d(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_atleast_2d(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_atleast_3d(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_bartlett(
        res: *mut mlx_array,
        M: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_bitwise_and(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_bitwise_invert(
        res: *mut mlx_array,
        a: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_bitwise_or(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_bitwise_xor(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_blackman(
        res: *mut mlx_array,
        M: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_block_masked_mm(
        res: *mut mlx_array,
        a: mlx_array,
        b: mlx_array,
        block_size: ::std::os::raw::c_int,
        mask_out: mlx_array,
        mask_lhs: mlx_array,
        mask_rhs: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_broadcast_arrays(
        res: *mut mlx_vector_array,
        inputs: mlx_vector_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_broadcast_to(
        res: *mut mlx_array,
        a: mlx_array,
        shape: *const ::std::os::raw::c_int,
        shape_num: usize,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_ceil(res: *mut mlx_array, a: mlx_array, s: mlx_stream) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_clip(
        res: *mut mlx_array,
        a: mlx_array,
        a_min: mlx_array,
        a_max: mlx_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_concatenate_axis(
        res: *mut mlx_array,
        arrays: mlx_vector_array,
        axis: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_concatenate(
        res: *mut mlx_array,
        arrays: mlx_vector_array,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conjugate(res: *mut mlx_array, a: mlx_array, s: mlx_stream)
    -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_contiguous(
        res: *mut mlx_array,
        a: mlx_array,
        allow_col_major: bool,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conv1d(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride: ::std::os::raw::c_int,
        padding: ::std::os::raw::c_int,
        dilation: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn mlx_conv2d(
        res: *mut mlx_array,
        input: mlx_array,
        weight: mlx_array,
        stride_0: ::std::os::raw::c_int,
        stride_1: ::std::os::raw::c_int,
        padding_0: ::std::os::raw::c_int,
        padding_1: ::std::os::raw::c_int,
        dilation_0: ::std::os::raw::c_int,
        dilation_1: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
        s: mlx_stream,
    ) -> ::std::os::raw::c_int;
}
